--- a/pal-fe/package.json
+++ b/pal-fe/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "d3-format": "^3.1.0",
     "framer-motion": "^6.2.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
