--- a/pal-fe/package.json
+++ b/pal-fe/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://cs307spring2022.github.io/PurduePAL-Frontend/",
   "name": "pal-fe",
   "version": "0.1.0",
   "private": true,
@@ -12,6 +13,7 @@
     "@testing-library/user-event": "^12.8.3",
     "d3-format": "^3.1.0",
     "framer-motion": "^6.2.4",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.26.1",
@@ -32,6 +34,8 @@
     "workbox-streams": "^5.1.4"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
