--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -21,7 +21,7 @@ jobs:
 
     steps:
     - name: Checkout Repository
-    - uses: actions/checkout@v3
+      uses: actions/checkout@v3
     
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
@@ -30,10 +30,10 @@ jobs:
         cache: 'npm'
 
     - name: Install dependencies    
-    - run: npm ci
+      run: npm ci
     
     - name: Build
-    - run: npm run build --if-present
+      run: npm run build --if-present
 
     - name: Deploy
       run: |
