--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -33,7 +33,7 @@ jobs:
       run: npm ci
     
     - name: Build
-      run: npm run build --if-present
+      run: CI='' npm run build --if-present
 
     - name: Deploy
       run: |
