--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -36,12 +36,18 @@ jobs:
     - name: Build
       run: CI='' npm run build --if-present
 
-    - name: Deploy
+    - name: Set Git
       run: |
         git config --global user.name $${{ secrets.USERNAME }}
         git config --global user.email $${{ secrets.EMAIL }}
         git remote set-url origin https://${github_token}@github.com/${repository}
-        npm run deploy
+      env:
+        user_name: 'github-actions[bot]'
+        user_email: 'github-actions[bot]'
+        github_token: $${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
+        repository: ${{ github.repository }}
+    - name: Deploy
+      run: npm run deploy
       env:
         user_name: 'github-actions[bot]'
         user_email: 'github-actions[bot]'
