--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -36,20 +36,8 @@ jobs:
     - name: Build
       run: CI='' npm run build --if-present
 
-    - name: Set Git
-      run: |
-        git config --global user.name $${{ secrets.USERNAME }}
-        git config --global user.email $${{ secrets.EMAIL }}
-        git remote set-url origin https://${github_token}@github.com/${repository}
-      env:
-        user_name: 'github-actions[bot]'
-        user_email: 'github-actions[bot]'
-        github_token: $${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
-        repository: ${{ github.repository }}
-    - name: Deploy
-      run: npm run deploy
-      env:
-        user_name: 'github-actions[bot]'
-        user_email: 'github-actions[bot]'
-        github_token: $${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
-        repository: ${{ github.repository }}
+    - name: Deploy to gh-pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+        publish_dir: ./build
