--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -40,4 +40,4 @@ jobs:
       uses: JamesIves/github-pages-deploy-action@4.1.1
       with:
         branch: gh-pages
-        folder: .
+        folder: build
