--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "buffer": "^6.0.3",
     "d3-format": "^3.1.0",
     "framer-motion": "^6.2.4",
     "gh-pages": "^3.2.3",
@@ -34,7 +35,7 @@
     "workbox-streams": "^5.1.4"
   },
   "scripts": {
-    "predeploy":"npm run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
